--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <title>Realtime Image Identification</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +15,8 @@
 
 <body>
 <center>
-  <h3 class="btn btn-danger heading">
-    Realtime Image Identification
+  <h3 class="btn btn-danger  heading">
+    Face Recognition App
   <hr>
   <center>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 heading_div">
@@ -30,10 +29,21 @@
 
   </center>
   </h3>
+  <br>
+  <br>
+  <p class="btn btn-warning result_para_tag"> Object : 
+    <span id="result_object_name"></span>
+  </p>
+  <br><br>
+  <p class="btn btn-warning result_para_tag"> Accuracy : 
+    <span id="result_object_accuracy"></span>
+  </p>
 </center>
+<div class="btn btn-warning copy_right_footer">
+  Developed By - Ayaan Save   
+</div>
 <script src="main.js"></script>
 </body>
-
 </html>
 
 
