--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <center>
-  <h3 class="btn btn-danger  heading">
+  <h3 class="btn btn-light heading">
     Face Recognition App
   <hr>
   <center>
